--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="right">
-        <img src="pic1.png">
+        <img src="https://i.postimg.cc/hGdgH6Dm/pic1.png">
     </div>
 </div>
 </header>
